# synthocean

./: Interp_model2SWOT.py  Line_command_interp_eORCA25.py  README.md  pyproject.toml
examples/: run_eorca12_era5v1_model2swot.slurm
model_2SWOT/: model2SWOT.py
